Refactor backend and frontend for Spotify Clone
- Removed unused auth middleware and song model.
- Updated user model to include Google and Spotify authentication fields.
- Replaced cookie-session with express-session for session management.
- Implemented JWT authentication for protected routes.
- Refactored routes for Google OAuth login and added JWT token handling.
- Removed song upload functionality and related routes.
- Updated frontend to handle authentication and display user playlists.
- Added Web Playback SDK integration for Spotify playback.
- Cleaned up components and context for better state management.
- Added new pages for App Home and Dashboard with user profile and playlists.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "jsonwebtoken": "^9.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-h5-audio-player": "^3.10.1",
