--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "gridfs-stream": "^1.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
