--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "connect-mongo": "^5.1.0",
     "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
